# llama-stack-demo-w

./: .gitignore  README-llm-d.md  README.md
client/: .env  Containerfile  README.md  app.py  files.py  image.sh  pyproject.toml  run.py  server.py  start-api.sh  start-app.sh  streaming_logger.py  vector_stores.py
client/commands/: agent_command.py  load_command.py  search_command.py
client/docs/: 2025_102_SD.md  2025_61-FR.md  2025_61-FR_INT.md  2025_73_JU.md  2025_88_GD.md  2025_94_FC.md
helm/: .helmignore  Chart.yaml  intel.yaml  nvidia-jina-v3.yaml  nvidia.yaml  run.sh  values-mcps.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  documents.yaml  grafana-dashboard-traces.yaml  grafana-datasource-rhoai.yaml  grafana-datasource-tempo.yaml  grafana-folder.yaml  grafana-proxy-rbac.yaml  grafana.yaml  hooks.yaml  lsd-genai-playground.yaml  lsd.yaml  mcp-servers-cm.yaml  mcp-servers.yaml  milvus.yaml  modelcar-connections.yaml  models.yaml  monitoring-dsci.yaml  otel-collector.yaml  otel-instrumentation.yaml  pipelines.yaml  playground.yaml  postgresql.yaml  run.yaml  secrets.yaml  service-monitor.yaml  tempo-monolithic.yaml
materials/: basic_ragas.ipynb
materials/datasets/: base_dataset.json  base_dataset_none.json  base_dataset_none_small.json  base_dataset_small.json
pipelines/: README.md  pyproject.toml  rag_pipeline.py  rag_pipeline_runner.py  ragas_dataset_eval_direct.py  ragas_dataset_eval_llamastack.py  ragas_dataset_generator.py  ragas_pipeline.py  ragas_pipeline.yaml  ragas_pipeline_scheduler.py
pipelines/shared/: kubeflow.py
scripts/: assign-nodes-to-users.sh  check-monitoring-telemetry.sh  setup-minio.sh  setup-monitoring-for-helm.sh  setup-rbac.sh  workshop-setup.sh
scripts/monitoring-general/: dsci-monitoring-patch.yaml  namespace.yaml  otel-collector.yaml  tempo-monolithic.yaml
scripts/resources/: mlflow.yaml
