[project]
name = "client"
version = "0.1.0"
description = "A simplified loader for Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests==2.32.5",
    "pyyaml==6.0.2",
    # "llama-stack-client==0.3.5",
    "llama-stack-client==0.4.2",
    "fire==0.7.1",
    "langchain==1.1.0",
    "langchain-openai==1.1.0",
    "langchain-core==1.1.0",
    "langchain-mcp-adapters==0.1.13",
    "langgraph==1.0.3",
    "fastapi==0.121.3",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.11.7",
    "streamlit==1.51.0",
    "flask==3.1.2",
    "streamlit==1.51.0",
    "portazgo==0.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
] 